Corregi textos, elimine comentarios, añadi ventana modal de productos al index

--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="venta de neumaticos" />
     <meta name="keywords" content="autos, camionetas, camion" />
-    <meta name="author" content="team4: Thiago Benjamin Fiol, Jose E. Navarro Bovi, Pablo Gonzalez, Ramiro velasquez y Santi Araoz Daniel E" />
+    <meta
+      name="author"
+      content="team4: Thiago Benjamin Fiol, Jose E. Navarro Bovi, Pablo Gonzalez, Ramiro velasquez y Santi Araoz Daniel E"
+    />
     <link rel="stylesheet" href="./css/bootstrap.min.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -17,13 +20,19 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap" rel="stylesheet">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap"
+      rel="stylesheet"
+    />
+    <link
+    rel="shortcut icon"
+    href="../img/40791defe7ae13714611621d7a0ea114-corte-de-rueda-de-coche-moderno.png"
+  />
     <link rel="stylesheet" href="../css/carrito.css" />
     <link rel="stylesheet" href="../css/style.css" />
-    <title>Carrito de compra</title>
+    <title>Carrito de compras</title>
   </head>
   <body>
     <header>
@@ -75,20 +84,26 @@
                 Buscar
               </button>
             </form>
-            <!-- Boton login - reemplazar en boton del nav-->
-<button class="btn btn-outline-success me-2 btn-nav" title="Iniciar sesion" data-bs-toggle="modal"
-data-bs-target="#ModalLogin">
-<i class="bi bi-box-arrow-in-right"></i>
-</button>
-<button
-class="btn btn-outline-success me-2 btn-nav"
-title="Registrarse"
->
-<a class="page-link" href="./registro.html"
-  ><i class="bi bi-person-add"></i
-></a>
-</button>
-            <button class="btn btn-outline-success btn-nav active" title="Carrito">
+            <button
+              class="btn btn-outline-success me-2 btn-nav"
+              title="Iniciar sesion"
+              data-bs-toggle="modal"
+              data-bs-target="#ModalLogin"
+            >
+              <i class="bi bi-box-arrow-in-right"></i>
+            </button>
+            <button
+              class="btn btn-outline-success me-2 btn-nav"
+              title="Registrarse"
+            >
+              <a class="page-link" href="./registro.html"
+                ><i class="bi bi-person-add"></i
+              ></a>
+            </button>
+            <button
+              class="btn btn-outline-success btn-nav active"
+              title="Carrito"
+            >
               <a class="page-link" href="../pages/carrito.html">
                 <i class="bi bi-cart4"></i
               ></a>
@@ -119,7 +134,11 @@ title="Registrarse"
                 <tbody>
                   <tr>
                     <th scope="row d-flex justify-content-center">
-                      <button type="button" class="btn btn-danger my-5" title="Eliminar">
+                      <button
+                        type="button"
+                        class="btn btn-danger my-5"
+                        title="Eliminar"
+                      >
                         <i class="bi bi-trash3"></i>
                       </button>
                     </th>
@@ -131,24 +150,40 @@ title="Registrarse"
                       />
                     </td>
                     <td>
-                      <h4>Pirelli Scorpion Trail II<span class="badge text-bg-secondary"> New</span></h4>
+                      <h4>
+                        Pirelli Scorpion Trail II<span
+                          class="badge text-bg-secondary"
+                        >
+                          New</span
+                        >
+                      </h4>
                       <p>Motocicleta</p>
                       <p>Cubierta 170 60 17</p>
                       <span class="text-warning">Envio Gratis</span>
                     </td>
                     <td>$270.540</td>
-                    <td><select class="form-select form-select-sm w-100 text-center" aria-label="Disabled select example" disabled>
-                      <option selected>2</option>
-                      <option value="1">1</option>
-                      <option value="2">2</option>
-                      <option value="3">3</option>
-                    </select></td>
+                    <td>
+                      <select
+                        class="form-select form-select-sm w-100 text-center"
+                        aria-label="Disabled select"
+                        disabled
+                      >
+                        <option selected>2</option>
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                      </select>
+                    </td>
                     <td><p class="text-center">$541.080</p></td>
                   </tr>
 
                   <tr>
                     <th scope="row">
-                      <button type="button" class="btn btn-danger my-5" title="Eliminar">
+                      <button
+                        type="button"
+                        class="btn btn-danger my-5"
+                        title="Eliminar"
+                      >
                         <i class="bi bi-trash3"></i>
                       </button>
                     </th>
@@ -162,22 +197,32 @@ title="Registrarse"
                     <td>
                       <h4>Pirelli Scorpion All Terrain Plus</h4>
                       <p>Camioneta</p>
-                      <p>Cubierta  LT315/70R17</p>
+                      <p>Cubierta LT315/70R17</p>
                       <span class="text-warning">Envio Gratis</span>
                     </td>
                     <td>$256.900</td>
-                    <td><select class="form-select form-select-sm w-100 text-center" aria-label="Disabled select example" disabled>
-                      <option selected>1</option>
-                      <option value="1">1</option>
-                      <option value="2">2</option>
-                      <option value="3">3</option>
-                    </select></td>
+                    <td>
+                      <select
+                        class="form-select form-select-sm w-100 text-center"
+                        aria-label="Disabled select"
+                        disabled
+                      >
+                        <option selected>1</option>
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                      </select>
+                    </td>
                     <td><p class="text-center">$256.900</p></td>
                   </tr>
 
                   <tr>
                     <th scope="row">
-                      <button type="button" class="btn btn-danger my-5" title="Eliminar">
+                      <button
+                        type="button"
+                        class="btn btn-danger my-5"
+                        title="Eliminar"
+                      >
                         <i class="bi bi-trash3"></i>
                       </button>
                     </th>
@@ -192,15 +237,21 @@ title="Registrarse"
                       <h4>Triangle 155</h4>
                       <p>Automóvil</p>
                       <p>Cubierta R13 LT TR999Q 8PR</p>
-                      <span class="text-warning">Envio Gratis</span>
+                      <span class="text-warning">Envío Gratis</span>
                     </td>
                     <td>$52.000</td>
-                    <td><select class="form-select form-select-sm w-100 text-center" aria-label="Disabled select example" disabled>
-                      <option selected>1</option>
-                      <option value="1">1</option>
-                      <option value="2">2</option>
-                      <option value="3">3</option>
-                    </select></td>
+                    <td>
+                      <select
+                        class="form-select form-select-sm w-100 text-center"
+                        aria-label="Disabled select"
+                        disabled
+                      >
+                        <option selected>1</option>
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                      </select>
+                    </td>
                     <td><p class="text-center">$52.000</p></td>
                   </tr>
                 </tbody>
@@ -226,18 +277,24 @@ title="Registrarse"
                   <h5 class="card-title">Total a pagar:</h5>
                   <span>$849.980</span>
                 </div>
-                <a href="../pages/error404.html"class="btn btn-primary my-2 me-2">Finalizar Comprar <span class="badge text-bg-secondary">3</a>
-                <a href="../pages/productos.html" class="btn btn-dark">Continuar comprando</a>
+                <a
+                  href="../pages/error404.html"
+                  class="btn btn-primary my-2 me-2"
+                  >Finalizar Comprar
+                  <span class="badge text-bg-secondary">3</span></a
+                >
+                <a href="../pages/productos.html" class="btn btn-dark"
+                  >Continuar comprando</a
+                >
               </div>
             </div>
 
             <div class="card my-4">
-              <div class="card-header bg-dark"><h5 class="h5 text-bg-dark">Soporte</h5></div>
+              <div class="card-header bg-dark">
+                <h5 class="h5 text-bg-dark">Soporte</h5>
+              </div>
               <div class="card-body">
-                <div
-                  class="accordion accordion-flush"
-                  id="accordionFlushExample"
-                >
+                <div class="accordion accordion-flush" id="acordeonSoporte">
                   <div class="accordion-item">
                     <h2 class="accordion-header" id="flush-headingOne">
                       <button
@@ -255,7 +312,7 @@ title="Registrarse"
                       id="flush-collapseOne"
                       class="accordion-collapse collapse"
                       aria-labelledby="flush-headingOne"
-                      data-bs-parent="#accordionFlushExample"
+                      data-bs-parent="#acordeonSoporte"
                     >
                       <div class="accordion-body">
                         ACEPTAMOS PAGOS MEDIANTE LAS SIGUIENTES TARJETAS DE
@@ -283,7 +340,7 @@ title="Registrarse"
                       id="flush-collapseTwo"
                       class="accordion-collapse collapse"
                       aria-labelledby="flush-headingTwo"
-                      data-bs-parent="#accordionFlushExample"
+                      data-bs-parent="#acordeonSoporte"
                     >
                       <div class="accordion-body">
                         LA MAYORÍA DE LA MERCANCÍA SE ENVIARÁ DENTRO DE 7 A 10
@@ -309,7 +366,7 @@ title="Registrarse"
                       id="flush-collapseThree"
                       class="accordion-collapse collapse"
                       aria-labelledby="flush-headingThree"
-                      data-bs-parent="#accordionFlushExample"
+                      data-bs-parent="#acordeonSoporte"
                     >
                       <div class="accordion-body">
                         NOS COMPLACE ACEPTAR DEVOLUCIONES DE PRODUCTOS COMPRADOS
@@ -475,47 +532,74 @@ title="Registrarse"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
-    <!-- Modal login agregar a todas las paginas-->
-<div class="modal fade" id="ModalLogin" tabindex="-1" aria-labelledby="exampleModallo" aria-hidden="true">
-  <div class="modal-dialog">
-      <div class="modal-content">
+    <div
+      class="modal fade"
+      id="ModalLogin"
+      tabindex="-1"
+      aria-labelledby="modalLogin"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
           <div class="modal-header text-bg-dark">
-
-              <h5 class="modal-title h5">Iniciar sesion</h5>
-              <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
-                  aria-label="Close"></button>
+            <h5 class="modal-title h5">Iniciar sesión</h5>
+            <button
+              type="button"
+              class="btn-close btn-close-white"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
           </div>
           <div class="modal-body">
-              <form>
-                  <div class="mb-3">
-                      <label for="exampleInputEmail1" class="form-label">Correo electronico</label>
-                      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-                          required minlength="10" maxlength="320">
-                      <div id="emailHelp" class="form-text"></div>
-                  </div>
-                  <div class="mb-3">
-                      <label for="exampleInputPassword1" class="form-label">Contraseña</label>
-                      <input type="password" class="form-control" id="exampleInputPassword1" required minlength="8"
-                          maxlength="64">
-                  </div>
-                  <div class="mb-3 form-check">
-                      <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                      <label class="form-check-label" for="exampleCheck1">Recordar</label>
-                  </div>
-
-                  <p>Es tu primera vez? <span><a href="./registro.html">Registrate</a></span></p>
-                  <div class="d-grid gap-2">
-                      <button type="submit" class="btn btn-primary mx-3">Iniciar sesion</button>
-                      <button type="submit" class="btn btn-dark mx-3"><i class="bi bi-google"></i> Continuar con
-                          Google</button>
-
-                  </div>
-
-              </form>
+            <form>
+              <div class="mb-3">
+                <label for="InputEmail1" class="form-label"
+                  >Correo electrónico</label
+                >
+                <input
+                  type="email"
+                  class="form-control"
+                  id="InputEmail1"
+                  aria-describedby="emailHelp"
+                  required
+                  minlength="10"
+                  maxlength="320"
+                />
+                <div id="emailHelp" class="form-text"></div>
+              </div>
+              <div class="mb-3">
+                <label for="InputPassword1" class="form-label"
+                  >Contraseña</label
+                >
+                <input
+                  type="password"
+                  class="form-control"
+                  id="InputPassword1"
+                  required
+                  minlength="8"
+                  maxlength="64"
+                />
+              </div>
+              <div class="mb-3 form-check">
+                <input type="checkbox" class="form-check-input" id="Check1" />
+                <label class="form-check-label" for="Check1">Recordar</label>
+              </div>
+              <p>
+                Es tu primera vez?
+                <span><a href="./registro.html">Registrate</a></span>
+              </p>
+              <div class="d-grid gap-2">
+                <button type="submit" class="btn btn-primary mx-3">
+                  Iniciar sesión
+                </button>
+                <button type="submit" class="btn btn-dark mx-3">
+                  <i class="bi bi-google"></i> Continuar con Google
+                </button>
+              </div>
+            </form>
           </div>
-
+        </div>
       </div>
-  </div>
-</div>
+    </div>
   </body>
 </html>
