--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -28,6 +28,10 @@
     />
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/contacto.css" />
+    <link
+    rel="shortcut icon"
+    href="../img/40791defe7ae13714611621d7a0ea114-corte-de-rueda-de-coche-moderno.png"
+  />
     <title>Contacto</title>
   </head>
   <body>
@@ -35,7 +39,7 @@
       <nav class="navbar navbar-expand-lg text-bg-light p-3">
         <div class="container">
           <a class="navbar-brand" href="../index.html"
-            ><img class="img-fluid logo" src="../img/logo.png" alt=""
+            ><img class="img-fluid logo" src="../img/logo.png" alt="logo R-neumaticos"
           /></a>
           <button
             class="navbar-toggler"
@@ -77,7 +81,6 @@
                 Buscar
               </button>
             </form>
-            <!-- Boton login - reemplazar en boton del nav-->
             <button
               class="btn btn-outline-success me-2 btn-nav"
               title="Iniciar sesion"
@@ -130,7 +133,7 @@
                 type="email"
                 class="form-control"
                 id="Email"
-                placeholder="Ej: juanperez@example.com"
+                placeholder="Ej: juanperez@.com"
                 required
                 minlength="10"
                 maxlength="320"
@@ -169,10 +172,10 @@
                 class="form-check-input"
                 type="checkbox"
                 value=""
-                id="flexCheckDefault"
+                id="flexCheck"
                 required
               />
-              <label class="form-check-label text-white" for="flexCheckDefault">
+              <label class="form-check-label text-white" for="flexCheck">
                 Acepto la
                 <span class="text-warning text-i"
                   ><a
@@ -230,7 +233,7 @@
                     href="./pages/error404.html"
                     class="link-light link-underline-opacity-0 link-underline-opacity-100-hover"
                     ><i class="bi bi-envelope-at-fill">
-                      r_neumaticos @example.com</i
+                      r_neumaticos@.com</i
                     ></a
                   >
                 </li>
@@ -262,7 +265,7 @@
                     <p class="dropdown-item">Martes, 8 AM-9 PM</p>
                   </li>
                   <li>
-                    <p class="dropdown-item">Miercoles, 8 AM-9 PM</p>
+                    <p class="dropdown-item">Miércoles, 8 AM-9 PM</p>
                   </li>
                   <li>
                     <p class="dropdown-item">Jueves, 8 AM-9 PM</p>
@@ -271,7 +274,7 @@
                     <p class="dropdown-item">Viernes, 8 AM-9 PM</p>
                   </li>
                   <li>
-                    <p class="dropdown-item">Sabado, 8 AM-1 PM</p>
+                    <p class="dropdown-item">Sábado, 8 AM-1 PM</p>
                   </li>
                   <li><p class="dropdown-item">Domingo, Cerrado</p></li>
                 </ul>
@@ -429,7 +432,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <!-- Modal -->
+
     <div
       class="modal fade"
       id="modalContacto"
@@ -548,7 +551,7 @@
             </p>
             <p>
               [rolling neumaticos] [ Gral. Paz 576, T4000 San Miguel de Tucumán]
-              [ (381) 1234567] [ r_neumaticos @example.com]
+              [ (381) 1234567] [ r_neumaticos @.com]
             </p>
           </div>
           <div class="modal-footer">
@@ -563,18 +566,18 @@
         </div>
       </div>
     </div>
-    <!-- Modal login agregar a todas las paginas-->
+
     <div
       class="modal fade"
       id="ModalLogin"
       tabindex="-1"
-      aria-labelledby="exampleModallo"
+      aria-labelledby="Modallo"
       aria-hidden="true"
     >
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header text-bg-dark">
-            <h5 class="modal-title h5">Iniciar sesion</h5>
+            <h5 class="modal-title h5">Iniciar sesión</h5>
             <button
               type="button"
               class="btn-close btn-close-white"
@@ -585,13 +588,13 @@
           <div class="modal-body">
             <form>
               <div class="mb-3">
-                <label for="exampleInputEmail1" class="form-label"
+                <label for="InputEmail1" class="form-label"
                   >Correo electronico</label
                 >
                 <input
                   type="email"
                   class="form-control"
-                  id="exampleInputEmail1"
+                  id="InputEmail1"
                   aria-describedby="emailHelp"
                   required
                   minlength="10"
@@ -600,13 +603,13 @@
                 <div id="emailHelp" class="form-text"></div>
               </div>
               <div class="mb-3">
-                <label for="exampleInputPassword1" class="form-label"
+                <label for="InputPassword1" class="form-label"
                   >Contraseña</label
                 >
                 <input
                   type="password"
                   class="form-control"
-                  id="exampleInputPassword1"
+                  id="InputPassword1"
                   required
                   minlength="8"
                   maxlength="64"
@@ -616,9 +619,9 @@
                 <input
                   type="checkbox"
                   class="form-check-input"
-                  id="exampleCheck1"
+                  id="Check1"
                 />
-                <label class="form-check-label" for="exampleCheck1"
+                <label class="form-check-label" for="Check1"
                   >Recordar</label
                 >
               </div>
@@ -629,7 +632,7 @@
               </p>
               <div class="d-grid gap-2">
                 <button type="submit" class="btn btn-primary mx-3">
-                  Iniciar sesion
+                  Iniciar sesión
                 </button>
                 <button type="submit" class="btn btn-dark mx-3">
                   <i class="bi bi-google"></i> Continuar con Google
