--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -34,7 +34,7 @@
       <nav class="navbar navbar-expand-lg text-bg-light p-3">
         <div class="container">
           <a class="navbar-brand" href="../index.html"
-            ><img class="img-fluid logo" src="../img/logo.png" alt=""
+            ><img class="img-fluid logo" src="../img/logo.png" alt="logo R-neumaticos"
           /></a>
           <button
             class="navbar-toggler"
@@ -94,7 +94,7 @@
               ></a>
             </button>
             <button class="btn btn-outline-success btn-nav">
-              <i class="bi bi-cart4"></i>
+              <a class="page-link" href="./carrito.html"><i class="bi bi-cart4"></i></a>
             </button>
           </div>
         </div>
@@ -364,18 +364,17 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
-    <!-- Modal login agregar a todas las paginas-->
     <div
       class="modal fade"
       id="ModalLogin"
       tabindex="-1"
-      aria-labelledby="exampleModallo"
+      aria-labelledby="Modallo"
       aria-hidden="true"
     >
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header text-bg-dark">
-            <h5 class="modal-title h5">Iniciar sesion</h5>
+            <h5 class="modal-title h5">Iniciar sesión</h5>
             <button
               type="button"
               class="btn-close btn-close-white"
@@ -386,13 +385,13 @@
           <div class="modal-body">
             <form>
               <div class="mb-3">
-                <label for="exampleInputEmail1" class="form-label"
+                <label for="InputEmail1" class="form-label"
                   >Correo electronico</label
                 >
                 <input
                   type="email"
                   class="form-control"
-                  id="exampleInputEmail1"
+                  id="InputEmail1"
                   aria-describedby="emailHelp"
                   required
                   minlength="10"
@@ -401,13 +400,13 @@
                 <div id="emailHelp" class="form-text"></div>
               </div>
               <div class="mb-3">
-                <label for="exampleInputPassword1" class="form-label"
+                <label for="InputPassword1" class="form-label"
                   >Contraseña</label
                 >
                 <input
                   type="password"
                   class="form-control"
-                  id="exampleInputPassword1"
+                  id="InputPassword1"
                   required
                   minlength="8"
                   maxlength="64"
@@ -417,9 +416,9 @@
                 <input
                   type="checkbox"
                   class="form-check-input"
-                  id="exampleCheck1"
+                  id="Check1"
                 />
-                <label class="form-check-label" for="exampleCheck1"
+                <label class="form-check-label" for="Check1"
                   >Recordar</label
                 >
               </div>
@@ -430,7 +429,7 @@
               </p>
               <div class="d-grid gap-2">
                 <button type="submit" class="btn btn-primary mx-3">
-                  Iniciar sesion
+                  Iniciar sesión
                 </button>
                 <button type="submit" class="btn btn-dark mx-3">
                   <i class="bi bi-google"></i> Continuar con Google
