--- a/pages/productos.html
+++ b/pages/productos.html
@@ -34,14 +34,14 @@
       rel="shortcut icon"
       href="../img/40791defe7ae13714611621d7a0ea114-corte-de-rueda-de-coche-moderno.png"
     />
-    <title>Rolling Neumaticos - Productos</title>
+    <title>Rolling Neumáticos - Productos</title>
   </head>
   <body>
     <header>
       <nav class="navbar navbar-expand-lg text-bg-light p-3">
         <div class="container">
           <a class="navbar-brand" href="../index.html"
-            ><img class="img-fluid logo" src="../img/logo.png" alt=""
+            ><img class="img-fluid logo" src="../img/logo.png" alt="logo R-neumaticos"
           /></a>
           <button
             class="navbar-toggler"
@@ -83,7 +83,6 @@
                 Buscar
               </button>
             </form>
-            <!-- Boton login - reemplazar en boton del nav-->
             <button
               class="btn btn-outline-success me-2 btn-nav"
               title="Iniciar sesion"
@@ -170,8 +169,6 @@
           <span class="visually-hidden">Next</span>
         </button>
       </section>
-
-      <!-- PUBLICIDAD Y FRASE PRINCIPAL-->
       <section class="bg-light">
         <div class="container py-5">
           <div class="row">
@@ -205,8 +202,6 @@
           </div>
         </div>
       </section>
-
-      <!--CARD COMPLETAS-->
       <section class="container my-5 bg-light">
         <div class="row justify-content-center">
           <div class="col-lg-4 col-md-6 col-sm-12 my-5">
@@ -215,7 +210,7 @@
                 <p class="text-light mt-3 fs-3 modeloF">DIABLO ROSSO III</p>
               </div>
               <div class="card-body bg-light">
-                <img src="../img/producto1.jpeg" alt="rueda" class="w-100" />
+                <img src="../img/producto1.jpeg" alt="neumatico diablo rosso iii" class="w-100" />
               </div>
               <div class="card-footer bg-dark cardFooterDiv">
                 <p class="text-light">
@@ -239,7 +234,7 @@
                 <p class="text-light mt-3 fs-3 modeloF">SCORPION TRAIL II</p>
               </div>
               <div class="card-body bg-light">
-                <img src="../img/producto2.jpeg" alt="rueda" class="w-100" />
+                <img src="../img/producto2.jpeg" alt="neumatico scorpion trail ii" class="w-100" />
               </div>
               <div class="card-footer bg-dark cardFooterDiv">
                 <p class="text-light">
@@ -263,7 +258,7 @@
                 <p class="text-light mt-3 fs-3">DIABLO ROSSO IV</p>
               </div>
               <div class="card-body bg-light">
-                <img src="../img/producto3.jpeg" alt="rueda" class="w-100" />
+                <img src="../img/producto3.jpeg" alt="neumatico diablo rosso iv" class="w-100" />
               </div>
               <div class="card-footer bg-dark cardFooterDiv">
                 <p class="text-light">
@@ -287,7 +282,7 @@
                 <p class="text-light mt-3 fs-3 modeloF">SCORPION-AT</p>
               </div>
               <div class="card-body bg-light">
-                <img src="../img/SCORPION-AT.png" alt="rueda" class="w-100" />
+                <img src="../img/SCORPION-AT.png" alt="neumatico scorpion at" class="w-100" />
               </div>
               <div class="card-footer bg-dark cardFooterDiv">
                 <p class="text-light">
@@ -311,7 +306,7 @@
                 <p class="text-light mt-3 fs-3 modeloF">SCORPION-ATR</p>
               </div>
               <div class="card-body bg-light">
-                <img src="../img/SCORPION-ATR.png" alt="rueda" class="w-100" />
+                <img src="../img/SCORPION-ATR.png" alt="neumatico scorpion atr" class="w-100" />
               </div>
               <div class="card-footer bg-dark cardFooterDiv">
                 <p class="text-light">
@@ -336,7 +331,7 @@
                 <p class="text-light mt-3 fs-3 modeloF">TR999-1</p>
               </div>
               <div class="card-body bg-light">
-                <img src="../img/TR999-1.png" alt="rueda" class="w-100" />
+                <img src="../img/TR999-1.png" alt="neumatico tr999" class="w-100" />
               </div>
               <div class="card-footer bg-dark cardFooterDiv">
                 <p class="text-light">
@@ -363,13 +358,13 @@
               <div class="card-body bg-light">
                 <img
                   src="../img/DuelerAT697.jpg"
-                  alt="rueda"
+                  alt="neumatico 697"
                   class="img-fluid w-50"
                 />
               </div>
               <div class="card-footer bg-dark cardFooterDiv">
                 <p class="text-light">
-                  vida util superior mayor resistencia al corte opcion numero
+                  vida útil superior, mayor resistencia al corte y opción número
                   uno para aventuras
                 </p>
 
@@ -392,7 +387,7 @@
               <div class="card-body bg-light imgComplicada">
                 <img
                   src="../img/Bridgestoneht470.png"
-                  alt="rueda"
+                  alt="neumatico 694"
                   class="img-fluid w-50"
                 />
               </div>
@@ -416,8 +411,6 @@
           </div>
         </div>
       </section>
-
-      <!--ACORDEON SECCIONES-->
       <section class="text-center">
         <h2>Busca en Secciones</h2>
         <div class="accordion accordion-flush" id="accordionFlushProducto">
@@ -446,12 +439,10 @@
 
                 <img
                   src="../img/ruedaPre.jpeg"
-                  alt="rueda suculenta"
+                  alt="neumatico banner"
                   class="ruedaPre"
                 />
               </section>
-
-              <!--card motos-->
               <section class="container my-5">
                 <div class="row justify-content-center">
                   <div class="col-lg-4 col-md-6 col-sm-12 my-5">
@@ -464,7 +455,7 @@
                       <div class="card-body bg-light">
                         <img
                           src="../img/producto1.jpeg"
-                          alt="rueda"
+                          alt="neumatico diablo rosso iii"
                           class="w-100"
                         />
                       </div>
@@ -494,7 +485,7 @@
                       <div class="card-body bg-light">
                         <img
                           src="../img/producto2.jpeg"
-                          alt="rueda"
+                          alt="neumatico scorpion trail ii"
                           class="w-100"
                         />
                       </div>
@@ -524,7 +515,7 @@
                       <div class="card-body bg-light">
                         <img
                           src="../img/producto3.jpeg"
-                          alt="rueda"
+                          alt="neumatico diablo rosso iv"
                           class="w-100"
                         />
                       </div>
@@ -567,19 +558,16 @@
               class="accordion-collapse collapse"
               data-bs-parent="#accordionFlushProducto"
             >
-              <!--banner autos-->
               <section class="position-relative">
                 <article class="position-absolute TextPre rueda-texto">
                   <h5 class="text-light display-4 text-center">Autos</h5>
                 </article>
                 <img
                   src="../img/ruedaPre.jpeg"
-                  alt="rueda suculenta"
+                  alt="rueda banner"
                   class="ruedaPre"
                 />
               </section>
-
-              <!--card autos-->
               <section class="container my-5">
                 <div class="row justify-content-center">
                   <div class="col-lg-4 col-md-6 col-sm-12 my-5">
@@ -590,7 +578,7 @@
                       <div class="card-body bg-light">
                         <img
                           src="../img/SCORPION-AT.png"
-                          alt="rueda"
+                          alt="neumatico Scorpion-AT"
                           class="w-100"
                         />
                       </div>
@@ -618,13 +606,13 @@
                       <div class="card-body bg-light">
                         <img
                           src="../img/SCORPION-ATR.png"
-                          alt="rueda"
+                          alt="neumatico scorpion atr"
                           class="w-100"
                         />
                       </div>
                       <div class="card-footer bg-dark cardFooterDiv">
                         <p class="text-light">
-                          El idolo de verano y numero uno en ventas, la mejor
+                          El ídolo de verano y numero uno en ventas, la mejor
                           rueda de la actualidad
                         </p>
                         <button
@@ -647,7 +635,7 @@
                       <div class="card-body bg-light">
                         <img
                           src="../img/TR999-1.png"
-                          alt="rueda"
+                          alt="neumatico tr999"
                           class="w-100"
                         />
                       </div>
@@ -696,12 +684,10 @@
 
                 <img
                   src="../img/banner4x4.jpg"
-                  alt="rueda suculenta"
+                  alt="banner 4x4"
                   class="ruedaPre"
                 />
               </section>
-
-              <!--card motos-->
               <section class="container my-5">
                 <div class="row justify-content-center">
                   <div class="col-lg-4 col-md-6 col-sm-12 my-5">
@@ -712,13 +698,13 @@
                       <div class="card-body bg-light">
                         <img
                           src="../img/DuelerAT697.jpg"
-                          alt="rueda"
+                          alt="neumatico 697"
                           class="img-fluid w-50"
                         />
                       </div>
                       <div class="card-footer bg-dark cardFooterDiv">
                         <p class="text-light">
-                          vida util superior mayor resistencia al corte opcion
+                          vida útil superior, mayor resistencia al corte y opción
                           numero uno para aventuras
                         </p>
 
@@ -741,7 +727,7 @@
                       <div class="card-body bg-light imgComplicada">
                         <img
                           src="../img/Bridgestoneht470.png"
-                          alt="rueda"
+                          alt="neumatico 694"
                           class="img-fluid w-50"
                         />
                       </div>
@@ -2066,7 +2052,7 @@
       <section class="container">
         <div class="row">
           <div class="col-md-4 col-lg-4 text-center">
-            <h4>Neumaticos</h4>
+            <h4>Neumáticos</h4>
             <ul class="list-unstyled">
               <li>
                 <a
@@ -2086,7 +2072,7 @@
                 <a
                   href="./pages/error404.html"
                   class="link-dark link-underline-opacity-0 link-underline-opacity-25-hover"
-                  >Camion</a
+                  >Camión</a
                 >
               </li>
             </ul>
@@ -2098,7 +2084,7 @@
                 <a
                   href="./pages/error404.html"
                   class="link-dark link-underline-opacity-0 link-underline-opacity-25-hover"
-                  >Gomeria</a
+                  >Gomería</a
                 >
               </li>
               <li>
@@ -2126,7 +2112,7 @@
                 <a
                   href="./pages/error404.html"
                   class="link-dark link-underline-opacity-0 link-underline-opacity-25-hover"
-                  >Mecanica</a
+                  >Mecánica</a
                 >
               </li>
             </ul>
@@ -2159,7 +2145,7 @@
                 <a
                   href="./pages/error404.html"
                   class="link-dark link-underline-opacity-0 link-underline-opacity-25-hover"
-                  >Garantia</a
+                  >Garantía</a
                 >
               </li>
             </ul>
@@ -2208,12 +2194,11 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
-    <!-- Modal login agregar a todas las paginas-->
     <div
       class="modal fade"
       id="ModalLogin"
       tabindex="-1"
-      aria-labelledby="exampleModallo"
+      aria-labelledby="Modallo"
       aria-hidden="true"
     >
       <div class="modal-dialog">
@@ -2230,13 +2215,13 @@
           <div class="modal-body">
             <form>
               <div class="mb-3">
-                <label for="exampleInputEmail1" class="form-label"
+                <label for="InputEmail1" class="form-label"
                   >Correo electronico</label
                 >
                 <input
                   type="email"
                   class="form-control"
-                  id="exampleInputEmail1"
+                  id="InputEmail1"
                   aria-describedby="emailHelp"
                   required
                   minlength="10"
@@ -2245,13 +2230,13 @@
                 <div id="emailHelp" class="form-text"></div>
               </div>
               <div class="mb-3">
-                <label for="exampleInputPassword1" class="form-label"
+                <label for="InputPassword1" class="form-label"
                   >Contraseña</label
                 >
                 <input
                   type="password"
                   class="form-control"
-                  id="exampleInputPassword1"
+                  id="InputPassword1"
                   required
                   minlength="8"
                   maxlength="64"
@@ -2261,9 +2246,9 @@
                 <input
                   type="checkbox"
                   class="form-check-input"
-                  id="exampleCheck1"
+                  id="Check1"
                 />
-                <label class="form-check-label" for="exampleCheck1"
+                <label class="form-check-label" for="Check1"
                   >Recordar</label
                 >
               </div>
