--- a/pages/registro.html
+++ b/pages/registro.html
@@ -21,19 +21,26 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
     />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="shortcut icon"
+      href="../img/40791defe7ae13714611621d7a0ea114-corte-de-rueda-de-coche-moderno.png"
+    />
 
     <link rel="stylesheet" href="../css/style.css" />
-    <title>Rolling Neumaticos</title>
+    <title>Rolling Neumáticos</title>
   </head>
   <body>
     <header>
       <nav class="navbar navbar-expand-lg text-bg-light p-3">
         <div class="container">
           <a class="navbar-brand" href="../index.html"
-            ><img class="img-fluid logo" src="../img/logo.png" alt=""
+            ><img class="img-fluid logo" src="../img/logo.png" alt="logo R-neumaticos"
           /></a>
           <button
             class="navbar-toggler"
@@ -75,11 +82,14 @@
                 Buscar
               </button>
             </form>
-            <!-- Boton login - reemplazar en boton del nav-->
-<button class="btn btn-outline-success me-2 btn-nav" title="Iniciar sesion" data-bs-toggle="modal"
-data-bs-target="#ModalLogin">
-<i class="bi bi-box-arrow-in-right"></i>
-</button>
+            <button
+              class="btn btn-outline-success me-2 btn-nav"
+              title="Iniciar sesion"
+              data-bs-toggle="modal"
+              data-bs-target="#ModalLogin"
+            >
+              <i class="bi bi-box-arrow-in-right"></i>
+            </button>
             <button
               class="btn btn-outline-success me-2 btn-nav"
               title="Registrarse"
@@ -155,7 +165,7 @@ data-bs-target="#ModalLogin">
             />
           </div>
           <div class="col-md-4 col-xl-6">
-            <label for="telefono" class="form-label">telefono</label>
+            <label for="telefono" class="form-label">Teléfono</label>
             <input
               type="number"
               class="form-control"
@@ -179,12 +189,12 @@ data-bs-target="#ModalLogin">
             />
           </div>
           <div class="col-md-4 col-xl-6">
-            <label for="CodigoPostal" class="form-label">Codigo postal</label>
+            <label for="CodigoPostal" class="form-label">Código postal</label>
             <select class="form-select" aria-label="CodigoPostal">
               <option selected>...</option>
-              <option value="1">San Miguel de tucuman (4000)</option>
+              <option value="1">San Miguel de Tucumán (4000)</option>
               <option value="2">Yerba Buena (4172)</option>
-              <option value="3">Banda del Rio Sali (4109)</option>
+              <option value="3">Banda del Rio Salí (4109)</option>
             </select>
           </div>
           <div class="col-md-4 col-xl-6">
@@ -200,7 +210,7 @@ data-bs-target="#ModalLogin">
           </div>
           <div class="col-12 d-grid gap-2">
             <button class="btn btn-warning disabled" type="submit">
-              suscribirme
+              Suscribirme
             </button>
           </div>
         </form>
@@ -353,47 +363,81 @@ data-bs-target="#ModalLogin">
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
-    <!-- Modal login agregar a todas las paginas-->
-<div class="modal fade" id="ModalLogin" tabindex="-1" aria-labelledby="exampleModallo" aria-hidden="true">
-  <div class="modal-dialog">
-      <div class="modal-content">
+    <div
+      class="modal fade"
+      id="ModalLogin"
+      tabindex="-1"
+      aria-labelledby="Modallo"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
           <div class="modal-header text-bg-dark">
-
-              <h5 class="modal-title h5">Iniciar sesion</h5>
-              <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"
-                  aria-label="Close"></button>
+            <h5 class="modal-title h5">Iniciar sesión</h5>
+            <button
+              type="button"
+              class="btn-close btn-close-white"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
           </div>
           <div class="modal-body">
-              <form>
-                  <div class="mb-3">
-                      <label for="exampleInputEmail1" class="form-label">Correo electronico</label>
-                      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-                          required minlength="10" maxlength="320">
-                      <div id="emailHelp" class="form-text"></div>
-                  </div>
-                  <div class="mb-3">
-                      <label for="exampleInputPassword1" class="form-label">Contraseña</label>
-                      <input type="password" class="form-control" id="exampleInputPassword1" required minlength="8"
-                          maxlength="64">
-                  </div>
-                  <div class="mb-3 form-check">
-                      <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                      <label class="form-check-label" for="exampleCheck1">Recordar</label>
-                  </div>
+            <form>
+              <div class="mb-3">
+                <label for="InputEmail1" class="form-label"
+                  >Correo electrónico</label
+                >
+                <input
+                  type="email"
+                  class="form-control"
+                  id="InputEmail1"
+                  aria-describedby="emailHelp"
+                  required
+                  minlength="10"
+                  maxlength="320"
+                />
+                <div id="emailHelp" class="form-text"></div>
+              </div>
+              <div class="mb-3">
+                <label for="InputPassword1" class="form-label"
+                  >Contraseña</label
+                >
+                <input
+                  type="password"
+                  class="form-control"
+                  id="InputPassword1"
+                  required
+                  minlength="8"
+                  maxlength="64"
+                />
+              </div>
+              <div class="mb-3 form-check">
+                <input
+                  type="checkbox"
+                  class="form-check-input"
+                  id="Check1"
+                />
+                <label class="form-check-label" for="Check1"
+                  >Recordar</label
+                >
+              </div>
 
-                  <p>Es tu primera vez? <span><a href="./registro.html">Registrate</a></span></p>
-                  <div class="d-grid gap-2">
-                      <button type="submit" class="btn btn-primary mx-3">Iniciar sesion</button>
-                      <button type="submit" class="btn btn-dark mx-3"><i class="bi bi-google"></i> Continuar con
-                          Google</button>
-
-                  </div>
-
-              </form>
+              <p>
+                Es tu primera vez?
+                <span><a href="./registro.html">Registrate</a></span>
+              </p>
+              <div class="d-grid gap-2">
+                <button type="submit" class="btn btn-primary mx-3">
+                  Iniciar sesión
+                </button>
+                <button type="submit" class="btn btn-dark mx-3">
+                  <i class="bi bi-google"></i> Continuar con Google
+                </button>
+              </div>
+            </form>
           </div>
-
+        </div>
       </div>
-  </div>
-</div>
+    </div>
   </body>
 </html>
